Bug 515554 - Scrolling mouse to zoom canvas doesn't zoom around the cursor
Summary: Scrolling mouse to zoom canvas doesn't zoom around the cursor
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.3.0-beta1
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2026-02-05 14:49 UTC by acc4commissions
Modified: 2026-02-12 09:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2026-02-05 14:49:18 UTC
SUMMARY

When I zoom the canvas through the mouse scroll in the official build, it zooms centered on the current position of the cursor. The new beta only zooms statically centered on the canvas.


STEPS TO REPRODUCE
1. Open Krita
2. Zoom in/out with the middle mouse scroll.


SOFTWARE/OS VERSIONS
Windows: Windows 10 x64
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Wolfgang Baer 2026-02-07 06:02:55 UTC
You can change the behaviour in:
Settings -> Canvas Input Settngs -> Zoom Canvas

Default is:
Zoom In
Zoom Out

Change those to:
Zoom In To Cursor
Zoom Out From Cursor
Comment 2 dra.w.p.il.e+bugskde 2026-02-11 22:08:47 UTC
This is a regression.
Comment 3 Dmitry Kazakov 2026-02-12 09:58:09 UTC
Git commit 2aa98b8644f3d7055be4220280c89ac1b30baafb by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 12/02/2026 at 09:57.
Pushed by dkazakov into branch 'master'.

Swap zoom to cursor with zoom to center action

In a8bee67d4c2887a5997beaa581c904cefc439882, new "zoom to center"
actions were added, which zoom into the center of the canvas instead of
where the cursor is pointing. However, instead of actually adding new
actions for this new behavior, the old actions were modified to have the
new behavior and the old behavior was added as new "zoom at cursor"
actions. That obviously causes regressions because everyone's canvas
input settings suddenly get switched to the new behavior.

This rectifies the situation by swapping the old actions back into the
place where they were before, making zooming at the cursor the default
again. Of course that means anyone who meanwhile changed their canvas
inputs to work against this breakage will get broken again, but
hopefully since they did it once, they'll also be able to do it again.

M  +4    -4    libs/ui/input/kis_zoom_action.h

https://invent.kde.org/graphics/krita/-/commit/2aa98b8644f3d7055be4220280c89ac1b30baafb
Comment 4 Dmitry Kazakov 2026-02-12 09:58:50 UTC
Git commit 06a5c97b17fd6034945044a469706fbd83d3e686 by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 12/02/2026 at 09:58.
Pushed by dkazakov into branch 'krita/6.0'.

Swap zoom to cursor with zoom to center action

In a8bee67d4c2887a5997beaa581c904cefc439882, new "zoom to center"
actions were added, which zoom into the center of the canvas instead of
where the cursor is pointing. However, instead of actually adding new
actions for this new behavior, the old actions were modified to have the
new behavior and the old behavior was added as new "zoom at cursor"
actions. That obviously causes regressions because everyone's canvas
input settings suddenly get switched to the new behavior.

This rectifies the situation by swapping the old actions back into the
place where they were before, making zooming at the cursor the default
again. Of course that means anyone who meanwhile changed their canvas
inputs to work against this breakage will get broken again, but
hopefully since they did it once, they'll also be able to do it again.

M  +4    -4    libs/ui/input/kis_zoom_action.h

https://invent.kde.org/graphics/krita/-/commit/06a5c97b17fd6034945044a469706fbd83d3e686