Swap zoom to cursor with zoom to center action

In a8bee67d4c2887a5997beaa581c904cefc439882, new "zoom to center"
actions were added, which zoom into the center of the canvas instead of
where the cursor is pointing. However, instead of actually adding new
actions for this new behavior, the old actions were modified to have the
new behavior and the old behavior was added as new "zoom at cursor"
actions. That obviously causes regressions because everyone's canvas
input settings suddenly get switched to the new behavior.

This rectifies the situation by swapping the old actions back into the
place where they were before, making zooming at the cursor the default
again. Of course that means anyone who meanwhile changed their canvas
inputs to work against this breakage will get broken again, but
hopefully since they did it once, they'll also be able to do it again.

BUG:515554