libs/ui/input/kis_zoom_action.h
@@ -23,16 +23,16 @@ public:
     enum Shortcuts {
         ZoomModeShortcut, ///< Toggle zoom mode.
         DiscreteZoomModeShortcut, ///< Toggle discrete zoom mode
-        ZoomInShortcut, ///< Zoom in by a fixed amount.
-        ZoomOutShortcut, ///< Zoom out by a fixed amount.
+        ZoomInToCursorShortcut, ///< Zoom in to cursor
+        ZoomOutFromCursorShortcut, ///< Zoom out from cursor
         Zoom100PctShortcut, ///< Reset zoom to 100%.
         FitToViewShortcut, ///< Zoom fit to page.
         FitToWidthShortcut, ///< Zoom fit to width.
         RelativeZoomModeShortcut, ///< Toggle zoom mode relative to cursor
         RelativeDiscreteZoomModeShortcut, ///< Toggle discrete zoom mode relative to cursor
         FitToHeightShortcut, ///< Zoom fit to height.
-        ZoomInToCursorShortcut, ///< Zoom in to cursor
-        ZoomOutFromCursorShortcut ///< Zoom out from cursor
+        ZoomInShortcut, ///< Zoom in by a fixed amount.
+        ZoomOutShortcut, ///< Zoom out by a fixed amount.
     };
     explicit KisZoomAction();
     ~KisZoomAction() override;
